Version 2.5.37dev:

* Fixed bug in login window, added close buttons to login/logout.
* Fixed OAGD.net locker uploader (really, this time).

Version 2.5.35dev:

* Added All Games / All Configurations to drop-down.
* Nicer behavior when kickstart ROM for chosen model is missing.
* Moved more warnings and information to status bar.
* Fixed handling of downloadable games.
* Use Fusion QT style on all platforms by default.
* Default to Fusion Adwaita style variant when running under GNOME 3.
* Show warning icon in settings if option is overriden by configuration.
* Fixed OAGD.net locker uploader.
* New additional configuration page.
* Moved custom configuration (button) to additional config page.
* Removed some "noise" from custom configuration and advanced settings.

Version 2.5.34dev:

* Changed tab panel appearance on OS X to match other platforms.
* Renamed language prefs to appearance prefs, added launcher theme option.
* Close login dialog before opening database refresh dialog.
* Settings UI for specifying empty floppy drive volume (or disabling it).
* Added keyboard settings to configure equals/insert/backslash/less mapping.
* Added support for WHDLoad 18.1, set as default version.
* Replaced some icons, added new rom/ram icon.
* Fixed an issue with the new CPU selection.

Version 2.5.33dev:

* FS-UAE Launcher / Arcade defaults to require PyQt5 now.
* Minimum OS X version (for official builds) is now 10.7 due to QT 5.5.
* Updated GUI layout.
* More expansion config controls (cpu, accelerator, graphics card, ++).
* Fixed issue with get_real_case usage on case sensitive systems (Linux).
* Login / logout entries in main menu did not update correctly.
* Redesigned model selection GUI (more room for additional models / presets).
* More Amiga model presets added.
* Do not write empty FS-UAE config values (less noise in the logs).
* Do not write known launcher-only settings to temp FS-UAE config file.